--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,5 +5,25 @@
   box-sizing: border-box;
 }
 
-/* font-family: 'Salsa', cursive; */
+/* font-family: 'Poppins',sans-serif; */
 /* font-family: 'Playfair Display', serif; */
+
+
+/* --------------------------Nav Bar  CSS-------------------------- */
+.navbar{
+  font-family: "Poppins",sans-serif;
+  font-size: 17px;
+  line-height: 26px;
+  text-transform: uppercase;
+  box-shadow: 0 8px 6px -6px rgb(194, 188, 188);
+  --webkit-box-shadow: 0 8px 6px -6px rgb(194, 188, 188);
+  border-bottom: 0.5px solid rgb(194, 188, 188) !important;
+}
+
+.nav-link {
+  font-weight: 300 !important;
+}
+
+.active {
+  border-bottom: 2px solid black;
+}
